# idm

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  flake.nix  shell.nix
examples/: blog.idm  blog.rs  convert-attributes.rs  echo.rs  echo_attributed.rs  inline-maps.rs  json2idm.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: from_str.rs
githooks/: pre-commit
src/: ast.rs  cursor.rs  de.rs  error.rs  fragment.rs  indent_string.rs  lexer.rs  lib.rs  new_parse.rs  outline.rs  parse.rs  parser.rs  ser.rs  tests.rs  util.rs
src/de/: de.rs  fragment.rs  mod.rs  parse.rs  parser.rs
src/ser/: ast.rs  mod.rs  ser.rs
