[package]
name = "idm"
version = "0.3.0-dev"
license = "MIT/Apache-2.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
edition = "2021"
description = "Implicit Data Markup"
categories = ["encoding"]

[dependencies]
serde = { version = "1", features = ["derive"] }
take_mut = "0.2"

[dev-dependencies]
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
indexmap = { version = "1", features = ["serde"] }
lazy_static = "1"
pretty_assertions = "1"
rouille = "3"
slug = "0.1"
