[package]
name = "idm"
version = "0.3.0-dev"
license = "MIT/Apache-2.0"
keywords = ["parser", "serde", "serialization"]
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
edition = "2021"
description = "Implicit Data Markup"
categories = ["encoding"]
readme = "README.md"
homepage = "https://github.com/rsaarelm/idm"
repository = "https://github.com/rsaarelm/idm"
exclude = ["fuzz/", "githooks/", "shell.nix", "Justfile"]

[dependencies]
serde = { version = "1", features = ["derive"] }
take_mut = "0.2"

[dev-dependencies]
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
indexmap = { version = "1", features = ["serde"] }
lazy_static = "1"
pretty_assertions = "1"
regex = "1"
rouille = "3"
slug = "0.1"
