[package]
edition = "2021"
name = "idm"
version = "0.4.0-dev"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
exclude = ["fuzz/", "githooks/", "shell.nix", "Justfile"]
description = "Implicit Data Markup"
homepage = "https://github.com/rsaarelm/idm"
readme = "README.md"
keywords = ["parser", "serde", "serialization"]
categories = ["encoding"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rsaarelm/idm"
resolver = "2"

[dependencies]
serde = { version = "1", features = ["derive"] }
take_mut = "0.2"

[dev-dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "1", features = ["serde"] }
lazy_static = "1"
pretty_assertions = "1"
regex = "1"
rouille = "3"
slug = "0.1"
